[package]
name = "tomebot"
version = "0.1.0"
authors = ["Allie Signet <allie@cat-girl.gay>"]
edition = "2018"

[dependencies]
serde_json = "1"
chrono = "0.4"
log = "0.4"
env_logger = "0.8.3"
diffy = "0.2.1"

[dependencies.postgres]
version = "0.19.1"
features = ["with-serde_json-1","with-uuid-0_8"]

[dependencies.reqwest]
version = "0.11"
features = ["json","blocking"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]
